--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bottleneck": "^2.19.5",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
