--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@biomejs/biome": "^1.9.4",
     "axios": "^1.7.7",
     "bottleneck": "^2.19.5",
     "dotenv": "^16.4.5"
